# levelUp

./: CMakeLists.txt  ParseManier  README.md  Subroutine_add_x.json  Subroutine_add_y.json  Subroutine_check_x.json  Subroutine_check_y.json  Subroutine_subtract_x.json  Subroutine_subtract_y.json  TuringMachine_change_value_main.json  TuringMachine_main.json  doxConfig  llParseFile.json
ProjectVoorstel/: MEB TO Doc.docx  Meb TO Features.xlsx  pecha kucha.pptx
Test/: CFGProductionTests.cpp  CFGTests.cpp  DataStructureTests.cpp  GameTests.cpp  TestMain.cpp
Test/testFiles/: CFG1.json  CFGFail1  CFGFail2  CFGFail3
datastructurenFase1/: CFG.cpp  CFG.h  CFGProduction.cpp  CFGProduction.h  json.hpp
doxygen/html/: CFGProduction_8h_source.html  CFG_8h_source.html  DesignByContract_8h_source.html  EndObject_8h_source.html  Entity_8h_source.html  GameObjectToSFML_8h_source.html  GameObject_8h_source.html  annotated.html  (+190 more)
include/: CFG.h  CFGProduction.h  DesignByContract.h  EndObject.h  Entity.h  Game.h  GameObject.h  GameObjectToSFML.h  LLParser.h  Level.h  LevelUp.h  Object.h  TuringMachine.h  json.hpp
output/: TM_change_value.gv  TM_check.gv
src/: CFG.cpp  CFGProduction.cpp  EndObject.cpp  Entity.cpp  Game.cpp  GameObject.cpp  GameObjectToSFML.cpp  LLParser.cpp  Level.cpp  LevelUp.cpp  Object.cpp  TuringMachine.cpp  main.cpp
testFiles/: CFG5.json  CFG6.json  CFG7.json  CFG8.json  TestFileCFG.json  test05.txt  test06.txt  test07  test08.txt  test09.txt  test10.txt  test11.txt  testInput.txt  testInput2.txt  testInputFail1.txt  testInputFail2.txt  testInputFail3.txt  testInput_multiple_levels.txt  voorbeeldinput.txt
turingMachine/: Subroutine_add_x.json  Subroutine_add_y.json  Subroutine_check_x.json  Subroutine_check_y.json  Subroutine_subtract_x.json  Subroutine_subtract_y.json  TuringMachine_change_value_main.json  TuringMachine_main.json
voortgangsraporten/: TO voortgangsrapport 16-11-2018.docx  TO voortgangsrapport 23-11-2018.docsx.docx  TO voortgangsrapport 30-11-2018.docx  TO voortgangsrapport-14-12-2018.docx  TO voortgangsrapport-23-12-2018 .docx  TO voortgangsrapport-7-12-2018.docx
(+91 files in other folders)
